# vtube-python

./: .editorconfig  .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
docs/: README.md  conf.py  getting_started.rst  index.rst
docs/api/: index.rst  vtpy.data.rst  vtpy.error.rst  vtpy.rst
docs/examples/: basic_usage.rst  events_usage.rst  index.rst
docs/guides/: connection.rst  events.rst  hotkeys.rst  index.rst  items.rst  models.rst  parameters.rst
examples/: README.md  __init__.py  basic_usage.py  events_usage.py
src/vtpy/: __init__.py  vts.py
src/vtpy/data/: __init__.py  common.py  effects.py  events.py  requests.py
src/vtpy/error/: __init__.py  error.py
tests/: __init__.py  conftest.py
vtpy/: __init__.py
vtpy/data/: __init__.py  common.py  discovery.py  events.py  requests.py
